technitium/technitium-exporter-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: technitium-exporter
  namespace: technitium
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: technitium-exporter
  template:
    metadata:
      labels:
        app: technitium-exporter
    spec:
      priorityClassName: mdapi-critical
      containers:
      - name: exporter
        image: ghcr.io/brioche-works/technitium-dns-prometheus-exporter:master@sha256:5cc719f892adfcf5a4574d65705bd6e96510a2476f4e4f08d156a014d7777739
        imagePullPolicy: Always
        ports:
        - name: metrics
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
          limits:
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /metrics
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /metrics
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
