technitium/technitium-dhcp-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: technitium-dhcp
  namespace: technitium
  annotations:
    purelb.io/service-group: default
spec:
  selector:
    app: technitium-primary
  ports:
  - name: dhcp
    port: 67
    protocol: UDP
    targetPort: 67
  type: LoadBalancer
  loadBalancerIP: 192.168.1.55
