technitium/technitium-exporter-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: technitium-exporter
  namespace: technitium
  labels:
    app: technitium-exporter
spec:
  selector:
    app: technitium-exporter
  ports:
  - name: metrics
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
