technitium/technitium-primary-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: technitium-primary
  namespace: technitium
spec:
  selector:
    app: technitium-primary
  ports:
  - name: http
    port: 5380
    targetPort: 5380
  type: ClusterIP
