technitium/technitium-primary-udp-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: technitium-primary-udp
  namespace: technitium
spec:
  selector:
    app: technitium-primary
  ports:
  - name: dns-udp
    port: 53
    targetPort: 53
    protocol: UDP
  type: ClusterIP
