technitium/technitium-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technitium
  namespace: technitium
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy-admin.oauth2-proxy.svc.cluster.local/admin/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://auth.mdapi.ch/admin/oauth2/start?rd=https://$host$escaped_request_uri
    nginx.ingress.kubernetes.io/modsecurity-transaction-id: "$request_id"
spec:
  ingressClassName: nginx
  rules:
  - host: dns.mdapi.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: technitium-primary
            port:
              number: 5380
  tls:
  - hosts:
    - dns.mdapi.ch
    secretName: technitium-cert
